<resources>
    <string name="app_name">Driper</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="save_state_login">Lưu trạng thái đăng nhập</string>
    <string name="un_save_state_login">Không lưu trạng thái đăng nhập</string>
    <string name="hint_id">Mã Sinh Viên</string>
    <string name="hint_pass">Mật Khẩu</string>
    <string name="hint_pass_again">Nhập lại</string>
    <string name="chu_y"><u>Chú ý:</u> Không nên sử dụng mật khẩu đttc để đăng kí tránh các đối tượng xấu :)</string>
    <string name="login_text">Đăng nhập</string>
    <string name="sigin_text">Đăng ký</string>
    <string name="reset_pass_text">Tìm MK</string>
    <string name="chu_y_2">* Vì lí do bảo mật nên bạn phải gửi một bức ảnh chụp có ảnh thẻ sinh viên của mình để xác nhận thông tin là đúng. Mật khẩu sẽ được gửi đến bạn khi đã được xác nhận.</string>
    <string name="chu_y_3">* Trong trường hợp không gửi được bạn có thể liên hệ tới địa chỉ : 24duong@gmail.com</string>
    <string name="hint_std">Số điện thoại của bạn</string>
    <string name="hint_sms">Nhập tin nhắn vào đây</string>
    <string name="chu_y_4">* Hãy sử dụng mã sinh viên là mã sinh viên của bạn.</string>
    <string name="hint_sdt">Số điện thoại</string>
    <string name="tv_login">Không thể kết nối internet \n Cick để tải lại...</string>
    <string name="infor_ten">Tên sinh viên: </string>
    <string name="infor_masv">Mã sinh viên: </string>
    <string name="infor_lop">Lớp độc lập: </string>
    <string name="infor_sdt">Số điện thoại: </string>
    <string name="infor_bxs">Biển số xe: </string>
    <string name="infor_vitri">Vị trí hiện tại: </string>
    <string name="infor_pass">Mật khẩu:</string>
    <string name="hint_pass_curent">Mật khẩu hiện tại</string>
    <string name="hint_pass_new_1">Mật khẩu mới</string>
    <string name="hint_pass_new_2">Nhập lại</string>
    <string name="bt_update_pass">Đổi mật khẩu</string>
    <string name="hint_sdt_curent">Số điện thoại</string>
    <string name="hint_edit_infor_sdt">Số điện thoại</string>
    <string name="hint_edit_infor_bsx">Biển số xe</string>
    <string name="bt_edit_infor_update">Cập nhật</string>
    <string name="request_find_bike_start">Điểm đi</string>
    <string name="request_find_bike_end">Điểm đến</string>
    <string name="request_find_bike_money">Số tiền</string>
    <string name="request_find_bike_text">Thông điệp hoặc khẩu hiệu</string>
    <string name="bt_request_find_bike_text">Đăng yêu cầu tìm xe</string>
    <string name="bt_request_find_person_text">Đăng yêu cầu tìm người</string>
    <string name="hint_search">Tìm kiếm vị trí</string>
    <string name="gps_network_not_enabled">Bật vị trí của bạn</string>
    <string name="open_location_settings">Bật</string>
    <string name="Cancel">Kệ</string>
    <string name="hint_dl_tim_xe_diem_di">Điểm đi</string>
    <string name="hint_dl_tim_xe_diem_den">Điểm đến</string>
    <string name="hint_dl_tim_xe_gia_tien">Giá tiền</string>
    <string name="hint_dl_tim_xe_loi_nhan">Chú thích, lời nhắn, thông điệp...</string>
    <string name="hint_dl_tim_nguoi_bsx">Biển số xe của tôi</string>
</resources>
