<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_marginLeft="@dimen/margin_17dp"
    android:layout_marginRight="@dimen/margin_17dp"
    android:layout_height="fill_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_5dp"
        android:padding="@dimen/padding_login"
        android:paddingBottom="@dimen/margin_5dp"
        android:background="@drawable/login_animation"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/hint_pass_curent"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:textColorHint="@color/md_green_500"
            android:id="@+id/et_update_pass_curent"
            android:password="true"
            android:background="@color/bg_app"
            android:textColor="@color/md_green_500"
            android:textSize="@dimen/text_size_20dp"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_5dp"
        android:padding="@dimen/padding_login"
        android:paddingBottom="@dimen/margin_5dp"
        android:background="@drawable/login_animation"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/hint_pass_new_1"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:textColorHint="@color/md_green_500"
            android:id="@+id/et_update_pass_new_1"
            android:password="true"
            android:background="@color/bg_app"
            android:textColor="@color/md_green_500"
            android:textSize="@dimen/text_size_20dp"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_5dp"
        android:padding="@dimen/padding_login"
        android:paddingBottom="@dimen/margin_5dp"
        android:background="@drawable/login_animation"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/hint_pass_new_2"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:textColorHint="@color/md_green_500"
            android:id="@+id/et_update_pass_new_2"
            android:password="true"
            android:background="@color/bg_app"
            android:textColor="@color/md_green_500"
            android:textSize="@dimen/text_size_20dp"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/text_size_10dp"
        android:layout_marginRight="@dimen/text_size_10dp"
        android:textColor="@color/md_red_500"
        android:textSize="@dimen/text_size_10dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_update_pass_noti" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:id="@+id/pb_update_pass"
            style="@android:style/Widget.Holo.ProgressBar"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_5dp"
            android:padding="@dimen/padding_login"
            android:paddingBottom="@dimen/margin_5dp"
            android:visibility="visible"
            android:background="@color/md_blue_500"
            android:id="@+id/bt_login"
            android:text="@string/bt_update_pass"
            android:minWidth="250dp"
            android:layout_gravity="center"
            android:textColor="@color/md_white_1000"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>